--- a/app/src/main/res/layout/users_cardview.xml
+++ b/app/src/main/res/layout/users_cardview.xml
@@ -17,7 +17,8 @@
             android:id="@+id/ppv_profilePic"
             android:layout_alignParentRight="true"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:layout_marginLeft="15dp"/>
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -41,7 +42,7 @@
                 android:layout_below="@id/tv_userName"
                 android:layout_alignParentRight="true"
                 android:paddingRight="10dp"
-                android:textSize="50dp"/>
+                android:textSize="35dp"/>
         </RelativeLayout>
 
 
