--- a/app/src/main/res/layout/activity_server_select.xml
+++ b/app/src/main/res/layout/activity_server_select.xml
@@ -8,14 +8,23 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="ca.shahnewazkhan.locator.ServerSelect"
-    android:background="#FCFCFC">
+    android:background="#6F8FA2">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Locator Beta 2"
         android:textSize="45sp"
+        android:textColor="#ffffff"
         android:layout_centerHorizontal="true"/>
+
+
+    <EditText
+        android:id="@+id/et_server"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:layout_centerVertical="true"
+        android:layout_marginBottom="15dp"/>
 
     <TextView
         android:id="@+id/tv_server"
@@ -23,15 +32,9 @@
         android:layout_height="wrap_content"
         android:text="Enter server url"
         android:textSize="35sp"
+        android:textColor="#ffffff"
         android:layout_above="@id/et_server"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="15dp"/>
-
-    <EditText
-        android:id="@+id/et_server"
-        android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:layout_centerVertical="true"
         android:layout_marginBottom="15dp"/>
 
     <Button
